# FirstEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt
libs/: CMakeLists.txt
libs/GLFW/: CMakeLists.txt
libs/GLFW/include/GLFW/: glfw3.h
libs/imgui/: CmakeLIsts.txt
libs/minitrace/: CMakeLists.txt  minitrace.c
libs/minitrace/include/minitrace/: minitrace.h
libs/vulkan/: CMakeLists.txt
src/: CMakeLists.txt
src/Core/: EntryPoint.cpp  EntryPoint.hpp  FirstEngine.cpp  FirstEngine.hpp  FirstEngineInclude.hpp  Macros.hpp
src/GraphicsCore/: Renderer.cpp  Renderer.hpp
src/GraphicsCore/Resources/Shaders/GLSL/: SimpleVertex.Vert  compile.bat
src/GraphicsCore/VulkanCore/: Vulkan.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.hpp  VulkanValidationLayers.cpp  VulkanValidationLayers.hpp  VulkanWindow.cpp  VulkanWindow.hpp
src/Logging/: Dump.txt  Logging.cpp  Logging.hpp
